# acutis

./: README.md
acutis_new/: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  pyproject.toml  requirements.txt  script-de-importacao.py  script_padronizar_enderecos.py  sonar-project.properties
acutis_new/migrations/: env.py
acutis_new/migrations/versions/: 036b9849ecb2_adicionando_numero_documento_em_membro.py  0f19a97ffd53_criando_tabela_ficha_vocacional.py  17b34d1f43ad_adicionando_tabela_recibos_agape.py  1eddc76a8b7a_remove_não_nulo_de_criado_por.py  218e81c94b9b_tornando_colunas_nullable_na_tabela_.py  21ed6f4e51a9_adicionando_tabela_pagamentos_doacoes.py  22e37c552410_created_fk_cargo_oficial_id.py  2b3b62ab9d6d_altera_modelos_de_permissões.py  3044119f7e35_adicionando_historico_de_movimentacoes_.py  34555bbf8e44_adicionando_tabela_campanhas_doacoes.py  346d0e69a8a0_altera_modelo_permissaolead_para_.py  37680b47262b_adicionando_tabela_processamentos_.py  37c33ec18660_adiciona_coluna_na_tabela_de_landing_.py  3b795b8b6135_criando_tabela_leads_campanhas.py  3c57bbed232c_alterado_colunas_na_tabela_oficial.py  3ed57318c487_adicionando_tabela_membros_agape.py  40d21293f22d_criando_tabela_de_coordenada.py  4bf23a17cef9_adicionando_tabela_itens_doacoes_agape.py  4e324c702cf8_adicionando_tabela_de_acoes_agape.py  4f6af38759d2_adicionado_tabela_de_templates_lp.py  592012181d55_criando_tabela_de_leads.py  634838243ff7_corrige_migrações_dos_modulo_de_.py  67f3f5e71cca_alterado_tabela_de_benfeitores_e_.py  710e9f5a64fe_adicionando_coluna_contabilizar_na_.py  721e58ef1814_criando_tabela_cadastro_vocacional.py  73fefac0cf5c_cria_modelos_de_permissoes.py  7454bd027061_adicionando_tabela_instancias_acoes_.py  77143d741724_adicionando_tabela_doacoes_agape.py  7993552d764b_adicionado_tabela_de_metadados_de_leads.py  846ec32a4fc4_criando_tabela_de_membros.py  89d6dbcdd611_adicionando_tabela_doacoes.py  902401750ce0_criando_tabela_usuario_vocacional.py  908e75a86ec9_adicionando_tabela_de_landing_pages.py  9380decda06c_criando_tabela_de_oficiais.py  9a07757ddbdc_adicionando_tabela_itens_instancias_.py  9ad997dcb468_cria_fk_cargo_superior_id_em_cargos_.py  a88422839195_adicionando_tabela_lembretes_doacoes_.py  ab01b04d524f_cria_modelo_sistema.py  ae0be73980fc_criando_tabela_de_benfeitores.py  b2fcdb2b39e0_adicionando_tabela_de_estoques_agape.py  (+17 more)
acutis_new/tests/: conftest.py  factories.py
acutis_new/tests/rotas_publicas/: test_rotas_publicas.py
acutis_new/tests/services/: test_google_maps_service.py
acutis_new/tests/utils/: test_calcula_idade.py  test_formatar_string.py  test_transforma_string_para_data.py  test_valida_cpf_cnpj.py  test_valida_email.py  test_valida_nome.py
acutis_new/tests/vocacional/: conftest.py
acutis_old/: builder.py  config.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties
acutis_old/controllers/: __init__.py  admin.py  agape.py  auth.py  campanha.py  checkout.py  dash_board.py  dash_board_donations.py  endereco.py  gateway_pagamento.py  get_logs.py  grupo.py  imagem.py  landpage.py  mensageria.py  pedidos_de_oracao.py  servicos.py  usuario.py  vocacional.py  webhooks.py  youtube_lives.py
acutis_old/exceptions/: errors_handler.py  exception_itau.py  exception_mercado_pago.py  exception_send_email.py  exception_upload_image.py
acutis_old/exceptions/error_types/: http_bad_request.py  http_conflict.py  http_forbidden.py  http_not_found.py  http_unauthorized.py  http_unprocessable_entity.py
acutis_old/handlers/campaigns/: campaign_details.py  campaign_get_by_id.py  campaigns_get_all.py  create_campaign.py  delete_campaign.py  update_campaign.py
acutis_old/handlers/checkout/: send_reminder_unpaid_donation.py
acutis_old/handlers/dashboard_donations/: campaigns_donations.py  card_media_mensal.py  card_media_weekday.py  card_total_dia_atual.py  card_total_do_mes.py  card_total_value.py  card_user_donations_actual_month.py  card_user_donations_total.py  card_valor_total_do_dia.py  doacoces_por_horas_do_dia_atual.py  donantions_per_weekday.py  donations_actual_month.py  donations_anonimous.py  donations_by_months.py  donations_per_type.py  donations_recorrentes_actual_month.py  donatons_per_hours.py  per_method_payment.py  progress_by_months.py  total_recorentes_mes_atual.py
acutis_old/handlers/dashboard_users/: amount_value_donation.py  card_media_diaria.py  (+12 more)
acutis_old/models/: __init__.py  actions_leads.py  agencia.py  baixa_lancamento.py  banco.py  boleto.py  boleto_lancamento.py  campanha.py  cargo.py  cargo_usuario.py  carteira.py  categoria_produto.py  chave_pix.py  classificacao_financeira.py  clifor.py  conta_corrente.py  conteudo_landpage.py  convenio.py  empresa.py  endereco.py  estado.py  evento_usuario.py  extrato_financeiro.py  filial.py  forma_pagamento.py  foto_campanha.py  foto_leads.py  gateway_pagamento.py  generais.py  historico_campanha_doacoes.py  item_pedido.py  lancamento.py  landpage.py  landpage_usuarios.py  leads_sorteados.py  list_exception_donations.py  logs.py  menu_sistema.py  migrations.py  municipio.py  (+20 more)
acutis_old/repositories/: admin_repository.py  agape_repository.py  checkout_repository.py  vocacional_repository.py
acutis_old/schedules/: __init__.py  jobs.py
acutis_old/services/: __init__.py  factories.py  file_service.py  file_service_interface.py  google_maps_service.py  itau_api.py  mercado_pago_api.py  prometheus_metrics.py  s3_service.py  send_data_to_app_acutis.py  send_data_to_make.py  send_data_to_memberkit.py
acutis_old/templates/: __init__.py  email_templates.py  exist_cadastro.html  formulario_cadastro_vocacional.html  formulario_ficha_vocacional.html
acutis_old/tests/: factories.py
acutis_old/utils/: __init__.py  checkout.py  decorators.py  export_donations_canceladas.py  export_donations_desconsideradas.py  export_excel.py  export_generais.py  functions.py  import_data_csv.py  info_user_log.py  logs_access.py  mercado_pago.py  regex.py  response.py  send_email.py  token_email.py  upload_image.py  validate_data.py  validator.py  verify_permission.py
(+1255 files in other folders)
